--- a/estilos1.css
+++ b/estilos1.css
@@ -1,5 +1,14 @@
 body {
+    padding-top: 300px;
+    font-size: 30px;
     background-color: #fff6ed; 
+    font-family: "Playfair Display", serif;
+    font-weight: 100;
+    
+    
+    
+    
+    
 }
 
 .navbar-custom {
