--- a/estilos1.css
+++ b/estilos1.css
@@ -30,9 +30,7 @@ body {
 
 h1 {
     font-size: 80px;
-    font-family: Bold;
-
-
+    font-family: 'Playfair Display', serif;
 }
 
 .offcanvas-fullscreen {
@@ -50,7 +48,7 @@ h1 {
     text-align: center;
     font-size: 40px;
     color: black;
-    font-family: Bold;
+    font-family: 'Playfair Display', serif;
 }
 
 .offcanvas-body div {
